// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Step /> component <Step.Counter /> component renders StepCounter with props correctly 1`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #00677F;
  border: 2px solid #00677F;
  color: #00677F;
  background-color: #FFFFFF;
}

.emotion-2 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #00677F;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="counter"
    style="border-width: 1px; background-color: rgb(236, 247, 251);"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary.default"
      data-testid="typography"
      style="font-weight: 700;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component renders StepCounter with props correctly 2`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #00677F;
}

.emotion-2 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #636464;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
    data-testid="counter"
    style="border-width: 1px;"
  >
    <i
      class="emotion-2 emotion-3"
      color="#636464"
      data-testid="icon"
    >
      check
    </i>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component renders StepCounter with props correctly 3`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #636464;
  border: 2px solid #BABBBB;
  color: #BABBBB;
  background-color: #FFFFFF;
}

.emotion-2 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #BABBBB;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="disabled"
    data-testid="counter"
    style="border-width: 1px;"
  >
    <span
      class="emotion-2 emotion-3"
      color="content.disabled"
      data-testid="typography"
      style="font-weight: 700;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component renders StepCounter with props correctly 4`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #FF4A4A;
  border: 2px solid #FF4A4A;
  color: #FF4A4A;
  background-color: #FFFFFF;
}

.emotion-2 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="error"
    data-testid="counter"
    style="border-width: 1px;"
  >
    <span
      class="emotion-2 emotion-3"
      color="error.default"
      data-testid="typography"
      style="font-weight: 700;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Counter /> component renders StepCounter with props correctly 5`] = `
.emotion-0 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #FF4A4A;
  border: 2px solid #FF4A4A;
  color: #FF4A4A;
  background-color: #FFFFFF;
}

.emotion-2 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="error"
    data-testid="counter"
    style="border-width: 1px; background-color: rgb(252, 238, 237);"
  >
    <span
      class="emotion-2 emotion-3"
      color="error.default"
      data-testid="typography"
      style="font-weight: 700;"
    >
      1
    </span>
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component renders StepCounter with props correctly 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #00677F;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component renders StepCounter with props correctly 2`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #00677F;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="primary"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component renders StepCounter with props correctly 3`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #BABBBB;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="disabled"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component renders StepCounter with props correctly 4`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="error"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component <Step.Label /> component renders StepCounter with props correctly 5`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

<div>
  <span
    class="emotion-0 emotion-1"
    color="error"
  >
    Label
  </span>
</div>
`;

exports[`<Step /> component render Step renders Step with props correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #00677F;
  border: 2px solid #00677F;
  color: #00677F;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #00677F;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #00677F;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="counter"
      style="border-width: 1px; background-color: rgb(236, 247, 251);"
    >
      <span
        class="emotion-4 emotion-5"
        color="primary.default"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="primary"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render Step renders Step with props correctly 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #00677F;
}

.emotion-4 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #636464;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #00677F;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="primary"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <i
        class="emotion-4 emotion-5"
        color="#636464"
        data-testid="icon"
      >
        check
      </i>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="primary"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render Step renders Step with props correctly 3`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #636464;
  border: 2px solid #BABBBB;
  color: #BABBBB;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #BABBBB;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #BABBBB;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="disabled"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <span
        class="emotion-4 emotion-5"
        color="content.disabled"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="disabled"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render Step renders Step with props correctly 4`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #FF4A4A;
  border: 2px solid #FF4A4A;
  color: #FF4A4A;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="error"
      data-testid="counter"
      style="border-width: 1px;"
    >
      <span
        class="emotion-4 emotion-5"
        color="error.default"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="error"
    >
      Label
    </span>
  </li>
</div>
`;

exports[`<Step /> component render Step renders Step with props correctly 5`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-weight: 700;
  font-size: 10px;
  line-height: 13.4px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FFFFFF;
  border: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-color: #FF4A4A;
  border: 2px solid #FF4A4A;
  color: #FF4A4A;
  background-color: #FFFFFF;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF4A4A;
}

<div>
  <li
    class="emotion-0 emotion-1"
  >
    <span
      class="emotion-2 emotion-3"
      color="error"
      data-testid="counter"
      style="border-width: 1px; background-color: rgb(252, 238, 237);"
    >
      <span
        class="emotion-4 emotion-5"
        color="error.default"
        data-testid="typography"
        style="font-weight: 700;"
      >
        1
      </span>
    </span>
    <span
      class="emotion-6 emotion-7"
      color="error"
    >
      Label
    </span>
  </li>
</div>
`;
